# Python_module_cozy_logger

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
cozy_logger/: __init__.py  logger.py
tests/: conftest.py  test_logger.py
