[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cozy_logger"
version = "1.1.0"
license = {text = "MIT"}
authors = [
    {name="Vitaly Kargin", email="super_set@mail.ru"},
]
description = "Custom logger with singleton pattern"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "packaging>=20.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/superset1/Python_module_cozy_logger"

[tool.setuptools]
packages = ["cozy_logger"]
